memperbaiki foto hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,7 +778,7 @@ a:hover {
 
 .hero .hero-title {
   color: rgb(255, 255, 255);
-  position: absolute;
+  position: relative;
   top: 25%;
   width: 100%;
   font-weight: 600;
